--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "start": "nodemon src/index.ts",
     "build": "rimraf dist && tsc",
     "ts.check": "tsc --project tsconfig.json",
-    "add-build": "git add build"
+    "add-build": "git add dist"
   },
   "pre-commit": [
     "ts.check",
