--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,7 +22,8 @@
     "isolatedModules": true,
     "noEmit": true,
     "jsx": "react-jsx",
-    "baseUrl": "."
+    "baseUrl": ".",
+    "outDir": "dist",
   },
   "include": [
     "src"
